--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "jazzicon",
-  "version": "2.0.0",
-  "description": "A starter project using react-hyperscript and beefy with ES6.",
+  "name": "rockicon",
+  "version": "1.0.0",
+  "description": "A fork of jazzicon with support of changing colors palette",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "beefy sample.js --live --open"
   },
-  "author": "Dan Finlay",
+  "author": "Victor Baranov",
   "license": "ISC",
   "dependencies": {
     "color": "^0.11.3",
@@ -16,14 +16,15 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flyswatter/jazzicon.git"
+    "url": "git+https://github.com/vbaranov/rockicon.git"
   },
   "keywords": [
     "identicon",
-    "jazz"
+    "jazz",
+    "rock"
   ],
   "bugs": {
-    "url": "https://github.com/flyswatter/jazzicon/issues"
+    "url": "https://github.com/vbaranov/rockicon/issues"
   },
-  "homepage": "https://github.com/flyswatter/jazzicon#readme"
+  "homepage": "https://github.com/vbaranov/rockicon#readme"
 }
